fixed khan__buy-link spacing

--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,4 +1,5 @@
 .khan__buy-link {
+  align-self: flex-start;
   margin-left: 48px;
   text-decoration: none;
   line-height: 42px;
